--- a/panels/sound/cc-output-test-dialog.ui
+++ b/panels/sound/cc-output-test-dialog.ui
@@ -2,124 +2,128 @@
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <template class="CcOutputTestDialog" parent="GtkDialog">
+    <property name="modal">True</property>
     <property name="resizable">False</property>
-    <child internal-child="vbox">
+    <child>
       <object class="GtkBox">
         <child>
           <object class="GtkGrid">
             <property name="visible">True</property>
             <property name="row_spacing">30</property>
             <property name="column_spacing">30</property>
-            <property name="margin">30</property>
+            <property name="margin-top">30</property>
+            <property name="margin-bottom">30</property>
+            <property name="margin-start">30</property>
+            <property name="margin-end">30</property>
             <child>
               <object class="CcSpeakerTestButton" id="front_left_speaker_button">
                 <property name="visible">True</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">0</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">0</property>
-              </packing>
             </child>
             <child>
               <object class="CcSpeakerTestButton" id="front_left_of_center_speaker_button">
                 <property name="visible">True</property>
+                <layout>
+                  <property name="column">1</property>
+                  <property name="row">0</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="top_attach">0</property>
-              </packing>
             </child>
             <child>
               <object class="CcSpeakerTestButton" id="front_center_speaker_button">
                 <property name="visible">True</property>
+                <layout>
+                  <property name="column">2</property>
+                  <property name="row">0</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">2</property>
-                <property name="top_attach">0</property>
-              </packing>
             </child>
             <child>
               <object class="CcSpeakerTestButton" id="front_right_of_center_speaker_button">
                 <property name="visible">True</property>
+                <layout>
+                  <property name="column">3</property>
+                  <property name="row">0</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">3</property>
-                <property name="top_attach">0</property>
-              </packing>
             </child>
             <child>
               <object class="CcSpeakerTestButton" id="front_right_speaker_button">
                 <property name="visible">True</property>
+                <layout>
+                  <property name="column">4</property>
+                  <property name="row">0</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">4</property>
-                <property name="top_attach">0</property>
-              </packing>
             </child>
             <child>
               <object class="CcSpeakerTestButton" id="side_left_speaker_button">
                 <property name="visible">True</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">1</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">1</property>
-              </packing>
             </child>
             <child>
               <object class="GtkImage">
                 <property name="visible">True</property>
                 <property name="icon_name">avatar-default-symbolic</property>
                 <property name="pixel_size">64</property>
+                <layout>
+                  <property name="column">2</property>
+                  <property name="row">1</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">2</property>
-                <property name="top_attach">1</property>
-              </packing>
             </child>
             <child>
               <object class="CcSpeakerTestButton" id="side_right_speaker_button">
                 <property name="visible">True</property>
+                <layout>
+                  <property name="column">4</property>
+                  <property name="row">1</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">4</property>
-                <property name="top_attach">1</property>
-              </packing>
             </child>
             <child>
               <object class="CcSpeakerTestButton" id="rear_left_speaker_button">
                 <property name="visible">True</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">2</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">2</property>
-              </packing>
             </child>
             <child>
               <object class="CcSpeakerTestButton" id="rear_center_speaker_button">
                 <property name="visible">True</property>
+                <layout>
+                  <property name="column">2</property>
+                  <property name="row">2</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">2</property>
-                <property name="top_attach">2</property>
-              </packing>
             </child>
             <child>
               <object class="CcSpeakerTestButton" id="lfe_speaker_button">
                 <property name="visible">True</property>
+                <layout>
+                  <property name="column">3</property>
+                  <property name="row">2</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">3</property>
-                <property name="top_attach">2</property>
-              </packing>
             </child>
             <child>
               <object class="CcSpeakerTestButton" id="rear_right_speaker_button">
                 <property name="visible">True</property>
+                <layout>
+                  <property name="column">4</property>
+                  <property name="row">2</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">4</property>
-                <property name="top_attach">2</property>
-              </packing>
             </child>
             <child>
               <object class="GtkLabel">
@@ -128,12 +132,12 @@
                 <style>
                   <class name="dim-label"/>
                 </style>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">3</property>
+                  <property name="column-span">5</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">3</property>
-                <property name="width">5</property>
-              </packing>
             </child>
           </object>
         </child>
