--- a/panels/sound/cc-speaker-test-button.ui
+++ b/panels/sound/cc-speaker-test-button.ui
@@ -8,10 +8,14 @@
         <property name="visible">True</property>
         <property name="orientation">vertical</property>
         <property name="spacing">6</property>
-        <property name="margin">12</property>
+        <property name="margin-top">12</property>
+        <property name="margin-bottom">12</property>
+        <property name="margin-start">12</property>
+        <property name="margin-end">12</property>
         <child>
           <object class="GtkImage" id="image">
             <property name="visible">True</property>
+            <property name="icon-size">large</property>
           </object>
         </child>
         <child>
