--- a/panels/sound/cc-stream-row.ui
+++ b/panels/sound/cc-stream-row.ui
@@ -2,26 +2,26 @@
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <template class="CcStreamRow" parent="GtkListBoxRow">
+    <property name="activatable">False</property>
     <child>
       <object class="GtkBox">
-        <property name="visible">True</property>
-        <property name="margin">12</property>
+        <property name="margin-top">12</property>
+        <property name="margin-bottom">12</property>
+        <property name="margin-start">12</property>
+        <property name="margin-end">12</property>
         <property name="spacing">12</property>
         <child>
           <object class="GtkBox" id="label_box">
-            <property name="visible">True</property>
             <property name="spacing">6</property>
               <child>
                 <object class="GtkImage" id="icon_image">
-                  <property name="visible">True</property>
                   <style>
                     <class name="lowres-icon"/>
-		  </style>
+                  </style>
                 </object>
               </child>
               <child>
                 <object class="GtkLabel" id="name_label">
-                  <property name="visible">True</property>
                   <property name="ellipsize">end</property>
                   <property name="xalign">0</property>
                 </object>
@@ -30,7 +30,6 @@
         </child>
         <child>
           <object class="CcVolumeSlider" id="volume_slider">
-            <property name="visible">True</property>
             <property name="hexpand">True</property>
           </object>
         </child>
