--- a/panels/sound/cc-volume-slider.ui
+++ b/panels/sound/cc-volume-slider.ui
@@ -14,8 +14,10 @@
     <child>
       <object class="GtkToggleButton" id="mute_button">
         <property name="visible">True</property>
-        <property name="relief">none</property>
         <signal name="toggled" handler="mute_button_toggled_cb" object="CcVolumeSlider" swapped="yes"/>
+        <style>
+          <class name="flat" />
+        </style>
         <child>
           <object class="GtkImage" id="stream_type_icon">
             <property name="visible">True</property>
